<?xml version="1.0"?>
<package format="2">
  <name>Inverse_Kinematics</name>
  <version>0.0.0</version>
  <description>Inverse Kinematics example</description>

  <maintainer email="emre@todo.todo">emre</maintainer>
 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>

   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>


</package>
